# tsql_wasm

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.playground  README.md  cargo_test_output.txt  docker-compose.yml  metadata_diff.json  sys_metadata_master.json  temp_count.ps1  test_ado.ps1  test_full_output.txt  test_ignored_core.txt  test_ignored_core2.txt  test_output.txt  test_output_1.txt  test_output_2.txt  test_output_final.txt  test_parse.rs  test_playground.rs  test_results.txt  test_results_2.txt  test_ssms_visibility.ps1  tsql_wasm.sln
crates/iridium_core/: Cargo.toml  README.md  check_output.txt  final_check.txt
crates/iridium_core/examples/: debug_tokens.rs  test_rpc_sim.rs  test_ssms_db_query.rs  test_ssms_full.rs  test_sys_databases.rs  test_tables.rs
crates/iridium_core/src/: lib.rs
crates/iridium_core/src/ast/: common.rs  data_types.rs  expressions.rs
crates/iridium_core/src/catalog/: id_allocator.rs  index_registry.rs  mod.rs  object_resolver.rs  routine_registry.rs  sequence_registry.rs  synonym_registry.rs  table_registry.rs  trigger_registry.rs
crates/iridium_core/src/executor/: clock.rs  context.rs  context_factory.rs  context_frame.rs  context_impl.rs  context_row.rs  database_catalog.rs  date_time.rs  dirty_buffer.rs  engine.rs  evaluator.rs  fuzzy.rs  grouping.rs  identifier.rs  json.rs  mod.rs  physical.rs  predicates.rs  random.rs  regexp.rs  result.rs  schema.rs  schema_parts.rs  schema_physical.rs  session.rs  session_state_impl.rs  string_norm.rs  table_util.rs  transaction.rs  transaction_exec.rs  type_mapping.rs  value_helpers.rs  window.rs
crates/iridium_core/src/parser/: lexer.rs  mod.rs  state.rs
crates/iridium_core/src/storage/: btree_index.rs  mod.rs  redb_checkpoint.rs  redb_index_adapter.rs  redb_row_storage.rs  redb_storage.rs
crates/iridium_core/src/types/: mod.rs
crates/iridium_core/tests/: builtins_and_aggregates.rs  bulk_insert.rs  concurrency_deadlock.rs  concurrency_phase1.rs  concurrency_phase2.rs  cross_join_apply.rs  cursor_extended_test.rs  ddl_advanced.rs  debug_view.rs  dml_enhanced_test.rs  example.rs  feature_regressions.rs  fmtonly_test.rs  info_schema_parameters.rs  information_schema.rs  integration.rs  isolation_transaction_tests.rs  merge_statement.rs  metadata_differential.rs  metadata_fidelity.rs  migration_patterns.rs  missing_features_repro.rs  nested_transactions_state.rs  new_math_functions.rs  new_string_functions.rs  new_system_functions.rs  new_types.rs  niladic_functions.rs  p1_16_read_only_udf_regression.rs  parser_boundary_rewrite.rs  parser_constraints_full.rs  parser_edge_cases.rs  parser_regressions.rs  parser_transaction_options.rs  parser_tvp.rs  persistence_redb.rs  phase1_expressions.rs  phase1_pivot.rs  phase1_unpivot.rs  phase2_pipeline_refactor.rs  (+56 more)
crates/iridium_core/tests/new_functions/: helpers.rs
crates/iridium_core/tests/parser/: parser_constraints_full.rs  parser_transaction_options.rs  parser_window_syntax.rs
crates/iridium_core/tests/phases/: phase1_expressions.rs  phase2_pipeline_refactor.rs  phase2_relational.rs  phase3_ddl.rs  phase3_errors_rowcount.rs  phase3_indexes_constraints.rs  phase3_metadata.rs  phase3_semantics.rs  phase3_sql_variant.rs  phase4_programmability.rs  phase4_programmability_closure.rs  phase5_concurrency_mvcc.rs  phase5_locking_recovery.rs  phase5_row_locking.rs  phase5_transactions.rs  phase6_deterministic_seed.rs  phase6_set_options_runtime.rs  phase6_tooling.rs  phase8_expression_differential.rs  phase8_parser_fuzz.rs  phase8_performance.rs  phase8_persistence.rs  phase8_random_query.rs  phase9_dml_advanced.rs  phase9_window_functions.rs
crates/iridium_core/tests/r7/: r7_current_date.rs  r7_fuzzy_matching.rs  r7_json_functions.rs  r7_regexp_functions.rs
crates/iridium_core/tests/sqlserver/: sqlserver_aggregates.rs  sqlserver_conversion.rs  sqlserver_cte.rs  sqlserver_dates.rs  sqlserver_dml.rs  sqlserver_identity.rs  sqlserver_joins.rs  (+9 more)
crates/iridium_server/: Cargo.toml  README.md
crates/iridium_server/src/: lib.rs  pool.rs  server.rs
crates/iridium_server/tests/: basic.rs  catalog_rpc.rs  compatibility.rs  crud.rs  cursor_compare_test.rs  cursor_compat_test.rs  cursor_quick_test.rs  playground.rs  pool.rs  security.rs  ssms_object_explorer_contract.rs
crates/iridium_server_test_support/: Cargo.toml  README.md
crates/iridium_server_test_support/src/: lib.rs
crates/iridium_wasm/: Cargo.toml  README.md
crates/iridium_wasm/src/: lib.rs
crates/tsql_core/: Cargo.toml  check_output_2.txt
crates/tsql_core/examples/: debug_tokens.rs  test_rpc_sim.rs  test_ssms_db_query.rs  test_ssms_full.rs  test_sys_databases.rs  test_tables.rs
crates/tsql_core/src/: ast.rs  error.rs  lib.rs
crates/tsql_core/tests/: builtins_and_aggregates.rs  concurrency_deadlock.rs  concurrency_phase1.rs  concurrency_phase2.rs  cross_join_apply.rs  cursor_extended_test.rs  ddl_advanced.rs  debug.rs  debug2.rs  debug_view.rs  dml_enhanced_test.rs  example.rs  fmtonly_test.rs  info_schema_parameters.rs  information_schema.rs  integration.rs  isolation_transaction_tests.rs  merge_statement.rs  metadata_differential.rs  migration_patterns.rs  nested_transactions_state.rs  new_logic_functions.rs  new_math_functions.rs  new_metadata_functions.rs  new_string_functions.rs  new_system_functions.rs  new_types.rs  p1_16_read_only_udf_regression.rs  parser_boundary_rewrite.rs  parser_edge_cases.rs  parser_regressions.rs  parser_tvp.rs  parser_window_syntax.rs  persistence_redb.rs  phase1_expressions.rs  phase1_pivot.rs  phase1_unpivot.rs  phase2_relational.rs  phase3_ddl.rs  phase3_errors_rowcount.rs  (+66 more)
crates/tsql_server/: Cargo.toml
crates/tsql_server/src/: lib.rs  pool.rs  server.rs  session.rs  tds_tls_io.rs  tls.rs
crates/tsql_server/tests/: basic.rs  catalog_rpc.rs  compatibility.rs  crud.rs  cursor_compare_test.rs  cursor_compat_test.rs  cursor_quick_test.rs  playground.rs  pool.rs  security.rs  ssms_object_explorer_contract.rs  tiberius_connect.rs
crates/tsql_server_test_support/: Cargo.toml
crates/tsql_server_test_support/src/: lib.rs
(+660 files in other folders)
