[package]
name = "iridium_core"
version = "0.1.10"
edition = "2021"
description = "SQL Server-compatible Rust engine core for Iridium SQL"
license = "MIT"
repository = "https://github.com/celsowm/iridium-sql"
homepage = "https://github.com/celsowm/iridium-sql"
keywords = ["sql-server", "tds", "database", "wasm"]
categories = ["database", "web-programming"]
exclude = ["check_output*.txt", "final_check.txt"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
thiserror = "1"
hex = "0.4"
winnow = "0.7"
regex = "1.12.3"
redb = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
js-sys = "0.3"

[dev-dependencies]
tempfile = "3"
tiberius = { version = "0.12.3", default-features = false, features = ["tokio", "tds73", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
