[package]
name = "iridium_server_test_support"
version = "0.1.9"
edition = "2021"
description = "Test support helpers for Iridium SQL server integration tests"
license = "MIT"
repository = "https://github.com/celsowm/iridium-sql"
homepage = "https://github.com/celsowm/iridium-sql"
keywords = ["sql-server", "tds", "tests"]
categories = ["database", "development-tools::testing"]

[dependencies]
iridium_core = { path = "../iridium_core", version = "0.1.9" }
iridium_server = { path = "../iridium_server", version = "0.1.9" }
tiberius = { version = "0.11", default-features = false, features = ["tokio", "tds73", "chrono", "rustls"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
log = "0.4"
env_logger = "0.11"
