[package]
name = "iridium_wasm"
version = "0.1.7"
edition = "2021"
description = "WASM bindings for Iridium SQL"
license = "MIT"
repository = "https://github.com/celsowm/iridium-sql"
homepage = "https://github.com/celsowm/iridium-sql"
keywords = ["wasm", "sql-server", "database"]
categories = ["database", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
console_error_panic_hook = "0.1"
iridium_core = { path = "../iridium_core", version = "0.1.7" }
